change inisiasi to sesi
commit often

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-scribble/scribble.js"></script>
     <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
-    <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
     <link rel="stylesheet" href="uwm_nolog.css" type="text/css" />
     <link rel="stylesheet" href="extra_css.css" type="text/css" />
   </head>
@@ -35,28 +34,16 @@ class: center, middle, inverse, title-slide
 
 
 
-<style>.xe__progress-bar__container {
-  top:0;
-  opacity: 1;
-  position:absolute;
-  right:0;
-  left: 0;
-}
-.xe__progress-bar {
-  height: 0.25em;
-  background-color: #0051BA;
-  width: calc(var(--slide-current) / var(--slide-total) * 100%);
-}
-.remark-visible .xe__progress-bar {
-  animation: xe__progress-bar__wipe 200ms forwards;
-  animation-timing-function: cubic-bezier(.86,0,.07,1);
-}
-@keyframes xe__progress-bar__wipe {
-  0% { width: calc(var(--slide-previous) / var(--slide-total) * 100%); }
-  100% { width: calc(var(--slide-current) / var(--slide-total) * 100%); }
-}</style>
+
+
+
+layout: true
 
 &lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
+
+&lt;!-- this adds the link footer to all slides, depends on my-footer class in css--&gt;
+
+---
 
 # Inti (BMP)
 
@@ -120,7 +107,7 @@ Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan 
 &lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
 # Rancangan Aktivitas Tutorial:
 
-- [Inisiasi 1: Peran Pemasaran dalam Perusahaan dan Masyarakat](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
+- [Inisiasi 1: Peran Pemasaran dalam Perusahaan dan Masyarakat](https://bangtedy.github.io/manajemenpemasaran/sesi1#1)
 - [Inisiasi 2: Perumusan Strategi pemasaran](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
 - [Inisiasi 3: Segmentasi Pasar, Penargetan Pasar dan Pemosisian](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
 - [Inisiasi 4: Menganalisis Perlakuan Konsumen](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
