--- a/sesi1.html
+++ b/sesi1.html
@@ -4,10 +4,16 @@
     <title>Peran Pemasaran dalam Perusahaan dan Masyarakat</title>
     <meta charset="utf-8" />
     <meta name="author" content="Tedy Herlambang" />
-    <meta name="date" content="2021-10-13" />
+    <meta name="date" content="2021-10-16" />
     <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/remark-css/useR.css" rel="stylesheet" />
     <link href="libs/remark-css/uwm-fonts.css" rel="stylesheet" />
+    <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
+    <script src="libs/tile-view/tile-view.js"></script>
+    <script src="libs/fabric/fabric.min.js"></script>
+    <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
+    <script src="libs/xaringanExtra-scribble/scribble.js"></script>
+    <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
+    <link rel="stylesheet" href="uwm_nolog.css" type="text/css" />
     <link rel="stylesheet" href="extra_css.css" type="text/css" />
   </head>
   <body>
@@ -15,51 +21,164 @@
 class: center, middle, inverse, title-slide
 
 # Peran Pemasaran dalam Perusahaan dan Masyarakat
-## Inisiasi 2
+## Inisiasi 1
 ### Tedy Herlambang
-### 2021-10-13
+### 2021-10-16
 
 ---
+
+
+
+
+
+
 
 
 
 
 
 layout: true
-  
+
 &lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
 
 &lt;!-- this adds the link footer to all slides, depends on my-footer class in css--&gt;
-
 ---
 
-class: middle
+#  LUARAN PEMBELAJARAN
 
-##  <svg aria-hidden="true" role="img" viewBox="0 0 320 512" style="height:1em;width:0.62em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:yellow;overflow:visible;position:relative;"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"/></svg> LUARAN PEMBELAJARAN
-
-Setelah mempelajari bab ini, mahasiswa diharapkan dapat:
-
-Menjelaskan peran pemasaran yang dilakukan oleh manajer pemasaran dalam perusahaan
-dan oleh pemasar dalam masyarakat yang berada di lingkungan yang terus
+Setelah mempelajari bab ini, mahasiswa diharapkan dapat: 
+- Menjelaskan peran pemasaran yang dilakukan oleh manajer pemasaran dalam perusahaan dan oleh pemasar dalam masyarakat yang berada di lingkungan yang terus
 berubah.
 
-Lebih khusus lagi: mahasiswa diharapkan dapat menjelaskan:
-1. pengertian pemasaran dari segi sosial;
-2. pengertian pemasaran dari segi manajerial;
-3. peran pemasaran dalam perusahaan;
+####  Lebih khusus lagi: mahasiswa diharapkan dapat menjelaskan:
+1. Pengertian pemasaran dari segi sosial;
+2. Pengertian pemasaran dari segi manajerial;
+3. Peran pemasaran dalam perusahaan;
 4. Konsep Pemasaran sebagai panduan filosofis dan praktis;
-5. tanggung jawab manajer pemasaran dalam perusahaan;
-6. peran pemasaran dalam masyarakat;
-7. tanggung jawab sosial;
-8. dimensi-dimensi tanggung jawab perusahaan;
-9. konsumerisme;
-10. pemasaran dalam lingkungan yang berubah.
+5. Tanggung jawab manajer pemasaran dalam perusahaan;
+6. Peran pemasaran dalam masyarakat;
+7. Tanggung jawab sosial;
+8. Dimensi-dimensi tanggung jawab perusahaan;
+9. Konsumerisme;
+10. Pemasaran dalam lingkungan yang berubah.
 
 ---
-# <svg aria-hidden="true" role="img" viewBox="0 0 320 512" style="height:1em;width:0.62em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:yellow;overflow:visible;position:relative;"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"/></svg> Header level 1
-## <svg aria-hidden="true" role="img" viewBox="0 0 320 512" style="height:1em;width:0.62em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:yellow;overflow:visible;position:relative;"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"/></svg> Header level 2
-### <svg aria-hidden="true" role="img" viewBox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:blue;overflow:visible;position:relative;"><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"/></svg> Header level 3
-#### <svg aria-hidden="true" role="img" viewBox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:blue;overflow:visible;position:relative;"><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"/></svg> Header level 4
+
+#  Fungsi Bisnis
+
+## Fungsi bisnis mana yang paling penting di perusahaan?
+
+1. Produksi dan Operasi 
+2. Akuntansi dan Keuangan
+3. Pemasaran
+4. Sumberdaya Manusia
+
+---
+
+
+# Apa saja yang dapat dipasarkan?
+
+### 1. Barang
+### 2. Jasa
+### 3.
+### 4.
+### 5.
+
+---
+
+# Proses Pemasaran
+
+- Dimulai dengan meriset pasar untuk memahami karakteristik dan perilaku konsumen dan untuk mengidentifikasi peluang guna memenuhi kebutuhan dan keinginan mereka.
+  + Segmentasi pasar dan penentuan segmen pasar, dan posisi pasar untuk dapat secara tepat memenuhi kebutuhan dan keinginan konsumen dengan cara yang unggul. 
+  + Mengapa segmentasi?
+  + Formulasi strategi pemasaran dan mengimplementasikannya ke dalam pemasaran terpadu (kebijakan harga, produk, distribusi dan promosi) yang lebih rinci. 
+  + Mengapa perlu strategi?
+
+---
+
+
+# Jadi Pemasaran itu ...
+
+Kegiatan perencanaan, dan pelaksanaan strategi pemasaran dan evaluasi hasil untuk perbaikan-perbaikan
+lebih lanjut.
+
+### Apa bedanya dengan manajemen pemasaran?
+
+---
+
+# Manajemen Pemasaran
+
+Manajemen pemasaran adalah seni dan ilmu memilih pasar sasaran dan mendapatkan, mempertahankan, dan menumbuhkan pelanggan melalui penciptaan, penyampaian dan pengomunikasian nilai pelanggan superior.
+
+---
+
+
+# Nilai pelanggan
+
+Nilai pelanggan = Manfaat -Pengorbanan
+( Customer Value = Benefit -Cost)
+
+Nilai pelanggan superior: ...
+ - contoh
+
+---
+
+
+# KONSEP PEMASARAN SEBAGAI FILOSOFI BISNIS
+
+#### “Pelanggan adalah raja.”
+
+#### “Setia melayani Anda.”
+
+#### “Anda adalah bos.”
+
+#### “Temukan keinginan mereka dan penuhilah.”
+
+---
+
+# Konsep Pemasaran sebagai filosofi bisnis
+
+1. orientasi pelanggan;
+2. koordinasi dan integrasi seluruh kegiatan pemasaran dalam perusahaan;
+3. pencapaian tujuan kinerja organisasi, yaitu laba jangka panjang;
+4. kinerja pemasaran yang lebih baik dibanding pesaing.
+
+---
+
+
+# DIMENSI-DIMENSI TANGGUNG JAWAB PERUSAHAAN
+
+- Laba/keuntungan
+
+- ....
+
+- ...
+
+- ...
+
+---
+
+
+
+# Konsumerisme
+- Sejumlah aktivitas dari organisasi dan aktivis konsumen yang independen, dirancang untuk melindungi konsumen.
+- Apa saja hak konsumen?
+
+---
+
+
+# LINGKUNGAN MAKROEKSTERN vs LINGKUNGAN MIKROEKSTERN
+
+---
+class: middle, center
+# BAURAN PEMASARAN
+
+&lt;img src="img/bauran_pemasaran.png" width="35%" /&gt;
+
+---
+class: middle, center
+### ELEMEN BAURAN PEMASARAN
+&lt;img src="img/tabel_elemen_bauran.png" width="30%" /&gt;
 ---
 
 class: inverse, right, middle
@@ -79,6 +198,7 @@ class: inverse, right, middle
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
+"slideNumberFormat": "%current%",
 "highlightStyle": "github",
 "highlightLines": true,
 "countIncrementalSlides": false,
