inisiasi to sesi
change what left

--- a/sesi1.html
+++ b/sesi1.html
@@ -21,7 +21,7 @@
 class: center, middle, inverse, title-slide
 
 # Peran Pemasaran dalam Perusahaan dan Masyarakat
-## Inisiasi 1
+## SESI 1
 ### Tedy Herlambang
 ### 2021-10-16
 
