inisiasi to sesi

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Manajemen Pemasaran</title>
     <meta charset="utf-8" />
     <meta name="author" content="Tedy Herlambang" />
-    <meta name="date" content="2021-10-16" />
+    <meta name="date" content="2021-10-17" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/uwm-fonts.css" rel="stylesheet" />
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
@@ -23,7 +23,7 @@ class: center, middle, inverse, title-slide
 # Manajemen Pemasaran
 ## Tinjauan Mata Kuliah
 ### Tedy Herlambang
-### 2021-10-16
+### 2021-10-17
 
 ---
 
@@ -107,14 +107,14 @@ Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan 
 &lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
 # Rancangan Aktivitas Tutorial:
 
-- [Inisiasi 1: Peran Pemasaran dalam Perusahaan dan Masyarakat](https://bangtedy.github.io/manajemenpemasaran/sesi1#1)
-- [Inisiasi 2: Perumusan Strategi pemasaran](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
-- [Inisiasi 3: Segmentasi Pasar, Penargetan Pasar dan Pemosisian](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
-- [Inisiasi 4: Menganalisis Perlakuan Konsumen](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
-- [Inisiasi 5: Pengelolaan produk dan pengembangan produk baru ](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
-- [Inisiasi 6: Strategi penetapan harga](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
-- [Inisiasi 7: Strategi  Distribusi](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
-- [Inisiasi 8: Strategi Promosi dan Periklanan](https://bangtedy.github.io/manajemenpemasaran/inisiasi1#1)
+- [Sesi 1: Peran Pemasaran dalam Perusahaan dan Masyarakat](https://bangtedy.github.io/manajemenpemasaran/sesi1#1)
+- [Sesi 2: Perumusan Strategi pemasaran](https://bangtedy.github.io/manajemenpemasaran/Sesi2#1)
+- [Sesi 3: Segmentasi Pasar, Penargetan Pasar dan Pemosisian](https://bangtedy.github.io/manajemenpemasaran/Sesi3#1)
+- [Sesi 4: Menganalisis Perlakuan Konsumen](https://bangtedy.github.io/manajemenpemasaran/Sesi4#1)
+- [Sesi 5: Pengelolaan produk dan pengembangan produk baru ](https://bangtedy.github.io/manajemenpemasaran/Sesi5#1)
+- [Sesi 6: Strategi penetapan harga](https://bangtedy.github.io/manajemenpemasaran/Sesi6#1)
+- [Sesi 7: Strategi  Distribusi](https://bangtedy.github.io/manajemenpemasaran/Sesi7#1)
+- [Sesi 8: Strategi Promosi dan Periklanan](https://bangtedy.github.io/manajemenpemasaran/Sesi8#1)
 
 
 ---
