--- a/sesi1.html
+++ b/sesi1.html
@@ -4,16 +4,16 @@
     <title>Peran Pemasaran dalam Perusahaan dan Masyarakat</title>
     <meta charset="utf-8" />
     <meta name="author" content="Tedy Herlambang" />
-    <meta name="date" content="2021-10-16" />
+    <meta name="date" content="2021-10-19" />
     <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/remark-css/uwm-fonts.css" rel="stylesheet" />
+    <link href="libs/remark-css/ki-fonts.css" rel="stylesheet" />
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
     <script src="libs/fabric/fabric.min.js"></script>
     <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-scribble/scribble.js"></script>
     <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
-    <link rel="stylesheet" href="uwm_nolog.css" type="text/css" />
+    <link rel="stylesheet" href="ki_nolog.css" type="text/css" />
     <link rel="stylesheet" href="extra_css.css" type="text/css" />
   </head>
   <body>
@@ -23,7 +23,7 @@ class: center, middle, inverse, title-slide
 # Peran Pemasaran dalam Perusahaan dan Masyarakat
 ## SESI 1
 ### Tedy Herlambang
-### 2021-10-16
+### 2021-10-19
 
 ---
 
@@ -44,13 +44,12 @@ layout: true
 &lt;!-- this adds the link footer to all slides, depends on my-footer class in css--&gt;
 ---
 
-#  LUARAN PEMBELAJARAN
-
+##  LUARAN PEMBELAJARAN
 Setelah mempelajari bab ini, mahasiswa diharapkan dapat: 
 - Menjelaskan peran pemasaran yang dilakukan oleh manajer pemasaran dalam perusahaan dan oleh pemasar dalam masyarakat yang berada di lingkungan yang terus
 berubah.
 
-####  Lebih khusus lagi: mahasiswa diharapkan dapat menjelaskan:
+####  Lebih khusus lagi, mahasiswa diharapkan dapat menjelaskan:
 1. Pengertian pemasaran dari segi sosial;
 2. Pengertian pemasaran dari segi manajerial;
 3. Peran pemasaran dalam perusahaan;
