--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <title>Manajemen Pemasaran</title>
     <meta charset="utf-8" />
     <meta name="author" content="Tedy Herlambang" />
-    <meta name="date" content="2021-10-17" />
+    <meta name="date" content="2021-10-19" />
     <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/remark-css/uwm-fonts.css" rel="stylesheet" />
+    <link href="libs/remark-css/ki-fonts.css" rel="stylesheet" />
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
     <script src="libs/fabric/fabric.min.js"></script>
     <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-scribble/scribble.js"></script>
     <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
-    <link rel="stylesheet" href="uwm_nolog.css" type="text/css" />
+    <link rel="stylesheet" href="ki_nolog.css" type="text/css" />
     <link rel="stylesheet" href="extra_css.css" type="text/css" />
   </head>
   <body>
@@ -23,7 +23,7 @@ class: center, middle, inverse, title-slide
 # Manajemen Pemasaran
 ## Tinjauan Mata Kuliah
 ### Tedy Herlambang
-### 2021-10-17
+### 2021-10-19
 
 ---
 
@@ -57,8 +57,6 @@ Memberikan gambaran tentang bagaimana sebuah perusahaan berupaya mencapai tujuan
 
 ---
 
-&lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
-
 # Capaian Pembelajaran:
 
 Membekali mahasiswa dengan pengetahuan tentang prinsip-prinsip manajemen pemasaran dan proses manajemen pemasaran, sehingga dapat digunakan untuk merencanakan, melaksanakan, menganalisis, dan mengevaluasi kegiatan pemasaran pada kehidupan bisnis. 
@@ -68,8 +66,6 @@ Membekali mahasiswa dengan pengetahuan tentang prinsip-prinsip manajemen pemasar
 Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan strategi pemasaran, perilaku konsumen dalam pengambilan keputusan pembelian, pengelolaan produk dan pengembangan produk baru, segmentasi pasar, penentuan pasar sasaran, dan pemosisian produk, daur hidup produk, strategi penetapan harga, strategi distribusi, dan strategi promosi dan periklanan. 
 
 ---
-
-&lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
 
 # Strategi Tutorial
 - Mahasiswa belajar aktif, 
@@ -83,8 +79,6 @@ Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan 
 
 ---
 
-&lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
-
 # <svg aria-hidden="true" role="img" viewBox="0 0 576 512" style="height:1em;width:1.12em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:yellow;overflow:visible;position:relative;"><path d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49 69.18-34.82 169.23-44.32 218.7-46.92 16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05 15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66 49.49 2.6 149.59 12.11 218.77 46.95 10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z"/></svg> Belajar Mandiri
 - Belajar mandiri dalam banyak hal ditentukan oleh kemampuan belajar secara efisien dan efektif. 
 - Kemampuan belajar bergantung pada kecepatan membaca dan kemampuan memahami isi bacaan. 
@@ -92,7 +86,7 @@ Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan 
 - Mahasiswa juga dituntut untuk dapat mengatur waktunya dengan efisien, sehingga dapat belajar secara teratur berdasarkan jadwal belajar yang ditentukan sendiri.
 
 ---
-&lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
+
 # <svg aria-hidden="true" role="img" viewBox="0 0 576 512" style="height:1em;width:1.12em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:yellow;overflow:visible;position:relative;"><path d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49 69.18-34.82 169.23-44.32 218.7-46.92 16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05 15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66 49.49 2.6 149.59 12.11 218.77 46.95 10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z"/></svg> Cara Mempelajari Modul
 - Mempelajari tinjauan mata kuliah
 - Membaca sepintas, kemudian mengulangi dengan lebih cermat
@@ -104,7 +98,7 @@ Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan 
 - Aktif berdiskusi pada saat kegiatan tutorial
 
 ---
-&lt;div class="my-footer"&gt;&lt;span&gt;bangtedy.github.io&lt;/span&gt;&lt;/div&gt;
+
 # Rancangan Aktivitas Tutorial:
 
 - [Sesi 1: Peran Pemasaran dalam Perusahaan dan Masyarakat](https://bangtedy.github.io/manajemenpemasaran/sesi1#1)
