--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Manajemen Pemasaran</title>
     <meta charset="utf-8" />
     <meta name="author" content="Tedy Herlambang" />
-    <meta name="date" content="2021-10-19" />
+    <meta name="date" content="2021-10-24" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/ki-fonts.css" rel="stylesheet" />
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
@@ -23,7 +23,7 @@ class: center, middle, inverse, title-slide
 # Manajemen Pemasaran
 ## Tinjauan Mata Kuliah
 ### Tedy Herlambang
-### 2021-10-19
+### 2021-10-24
 
 ---
 
@@ -102,11 +102,11 @@ Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan 
 # Rancangan Aktivitas Tutorial:
 
 - [Sesi 1: Peran Pemasaran dalam Perusahaan dan Masyarakat](https://bangtedy.github.io/manajemenpemasaran/sesi1#1)
-- [Sesi 2: Perumusan Strategi pemasaran](https://bangtedy.github.io/manajemenpemasaran/Sesi2#1)
+- [Sesi 2: Perumusan Strategi Pemasaran](https://bangtedy.github.io/manajemenpemasaran/Sesi2#1)
 - [Sesi 3: Segmentasi Pasar, Penargetan Pasar dan Pemosisian](https://bangtedy.github.io/manajemenpemasaran/Sesi3#1)
-- [Sesi 4: Menganalisis Perlakuan Konsumen](https://bangtedy.github.io/manajemenpemasaran/Sesi4#1)
-- [Sesi 5: Pengelolaan produk dan pengembangan produk baru ](https://bangtedy.github.io/manajemenpemasaran/Sesi5#1)
-- [Sesi 6: Strategi penetapan harga](https://bangtedy.github.io/manajemenpemasaran/Sesi6#1)
+- [Sesi 4: Menganalisis Perilaku Konsumen](https://bangtedy.github.io/manajemenpemasaran/Sesi4#1)
+- [Sesi 5: Pengelolaan Produk dan Strategi Daur Hidup Produk](https://bangtedy.github.io/manajemenpemasaran/Sesi5#1)
+- [Sesi 6: Strategi Penetapan Harga](https://bangtedy.github.io/manajemenpemasaran/Sesi6#1)
 - [Sesi 7: Strategi  Distribusi](https://bangtedy.github.io/manajemenpemasaran/Sesi7#1)
 - [Sesi 8: Strategi Promosi dan Periklanan](https://bangtedy.github.io/manajemenpemasaran/Sesi8#1)
 
