add reference in tinjauan

--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@ Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan 
 - [Sesi 7: Strategi  Distribusi](https://bangtedy.github.io/manajemenpemasaran/sesi7#1)
 - [Sesi 8: Strategi Promosi dan Periklanan](https://bangtedy.github.io/manajemenpemasaran/sesi8#1)
 
+---
+## Rujukan Utama
+1. Dharmmesta, Basu Swastha (2017). Manajemen Pemasaran. Edisi kedua. Universitas Terbuka Kota Tangerang Selatan
+
+## Rujukan Tambahan
+- Armstrong, Gary, et.al., 2015. Marketing : an Introduction. Pearson.
+- Kotler, Philip and Keller, Kevin L., 2016. Marketing Management, Global Edition. Pearson.
 
 ---
 class: inverse, right, middle
