--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <title>Manajemen Pemasaran</title>
     <meta charset="utf-8" />
     <meta name="author" content="Tedy Herlambang" />
-    <meta name="date" content="2021-10-24" />
+    <meta name="date" content="2021-11-02" />
     <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/remark-css/ki-fonts.css" rel="stylesheet" />
+    <link href="libs/remark-css/uwm-fonts.css" rel="stylesheet" />
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
     <script src="libs/fabric/fabric.min.js"></script>
     <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-scribble/scribble.js"></script>
     <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
-    <link rel="stylesheet" href="ki_nolog.css" type="text/css" />
+    <link rel="stylesheet" href="useR_nolog.css" type="text/css" />
     <link rel="stylesheet" href="extra_css.css" type="text/css" />
   </head>
   <body>
@@ -23,7 +23,7 @@ class: center, middle, inverse, title-slide
 # Manajemen Pemasaran
 ## Tinjauan Mata Kuliah
 ### Tedy Herlambang
-### 2021-10-24
+### 2021-11-02
 
 ---
 
@@ -121,7 +121,6 @@ Peran pemasaran dalam perusahaan dan masyarakat, proses manajemen pemasaran dan 
 ---
 class: inverse, right, middle
 
-&lt;img class= "circle" src="https://github.com/bangtedy.png" width="150px"/&gt;
 
 ### Matur nuwun <svg aria-hidden="true" role="img" viewBox="0 0 496 512" style="height:1em;width:0.97em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:gold;overflow:visible;position:relative;"><path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zM112 223.4c3.3-42.1 32.2-71.4 56-71.4s52.7 29.3 56 71.4c.7 8.6-10.8 11.9-14.9 4.5l-9.5-17c-7.7-13.7-19.2-21.6-31.5-21.6s-23.8 7.9-31.5 21.6l-9.5 17c-4.3 7.4-15.8 4-15.1-4.5zm250.8 122.8C334.3 380.4 292.5 400 248 400s-86.3-19.6-114.8-53.8c-13.5-16.3 11-36.7 24.6-20.5 22.4 26.9 55.2 42.2 90.2 42.2s67.8-15.4 90.2-42.2c13.6-16.2 38.1 4.3 24.6 20.5zm6.2-118.3l-9.5-17c-7.7-13.7-19.2-21.6-31.5-21.6s-23.8 7.9-31.5 21.6l-9.5 17c-4.1 7.3-15.6 4-14.9-4.5 3.3-42.1 32.2-71.4 56-71.4s52.7 29.3 56 71.4c.6 8.6-11 11.9-15.1 4.5z"/></svg>, find me at...
 
