--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Manajemen Pemasaran</title>
     <meta charset="utf-8" />
     <meta name="author" content="Tedy Herlambang" />
-    <meta name="date" content="2021-11-02" />
+    <meta name="date" content="2022-01-19" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/uwm-fonts.css" rel="stylesheet" />
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
@@ -13,6 +13,10 @@
     <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-scribble/scribble.js"></script>
     <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
+    <meta name="citation_title" content="Manajemen Pemasaran"/>
+    <meta name="citation_author" content="Tedy Herlambang"/>
+    <meta name="citation_publication_date" content="2021"/>
+    <meta name="citation_isbn" content=""/>
     <link rel="stylesheet" href="useR_nolog.css" type="text/css" />
     <link rel="stylesheet" href="extra_css.css" type="text/css" />
   </head>
@@ -23,9 +27,12 @@ class: center, middle, inverse, title-slide
 # Manajemen Pemasaran
 ## Tinjauan Mata Kuliah
 ### Tedy Herlambang
-### 2021-11-02
+### 2022-01-19
 
 ---
+
+
+
 
 
 
